@@ -1,0 +1,52 @@
+PI_ID            1
+PI_NAME          Ellingson, Steven
+
+PROJECT_ID       TPSS0001
+PROJECT_TITLE    Project Title
+PROJECT_REMPI    Project REMPI
+PROJECT_REMPO    Project REMPO
+
+SESSION_ID       1
+SESSION_TITLE    tp_session_sch SDF test #1
+SESSION_REMPI    Test SDF consisting of 2 short TRK_RADEC observations
+SESSION_REMPO    Session REMPO
+
+OBS_ID           1
+OBS_TITLE        Observation 1 Title
+OBS_TARGET       Observation 1 Target
+OBS_REMPI        Observation 1 REMPI
+OBS_REMPO        Observation 1 REMPO
+OBS_START_MJD    55616
+OBS_START_MPM    0
+OBS_START        UTC 2011 02 24 00:00:00.000000
+OBS_DUR          10000
+OBS_DUR+         00:00:10.000
+OBS_MODE         TRK_SOL
+OBS_B            SIMPLE
+OBS_FREQ1        438261968
+OBS_FREQ1+       19.999999955 MHz
+OBS_FREQ2        1928352663
+OBS_FREQ2+       87.999999977 MHz
+OBS_BW           7
+OBS_BW+          19.600 MHz
+
+OBS_ID           2
+OBS_TITLE        Observation 2 Title
+OBS_TARGET       Observation 1 Target
+OBS_REMPI        Observation 1 REMPI
+OBS_REMPO        Estimated data volume for this observation is 790.1 MB
+OBS_START_MJD    55616
+OBS_START_MPM    10000
+OBS_START        UTC 2011 02 24 00:00:10.000000
+OBS_DUR          10000
+OBS_DUR+         00:00:10.000
+OBS_MODE         TRK_SOL
+OBS_B            SIMPLE
+OBS_FREQ1        832697741
+OBS_FREQ1+       37.999999997 MHz
+OBS_FREQ2        1621569285
+OBS_FREQ2+       73.999999990 MHz
+OBS_BW           7
+OBS_BW+          19.600 MHz
+
+
