@@ -1,0 +1,107 @@
+PI_ID            1
+PI_NAME          Ellingson, Steven
+
+PROJECT_ID       TPSS0001
+PROJECT_TITLE    Project Title
+PROJECT_REMPI    Project REMPI
+PROJECT_REMPO    Project REMPO
+
+SESSION_ID       1
+SESSION_TITLE    tp_session_sch SDF test #1
+SESSION_REMPI    Test SDF consisting of 2 short TRK_RADEC observations
+SESSION_REMPO    Session REMPO
+SESSION_LOG_SCH  1
+SESSION_LOG_EXE  1
+
+OBS_ID           1
+OBS_TITLE        stps-1
+OBS_TARGET       azalt-1
+OBS_REMPI        None provided
+OBS_REMPO        Observation 1 REMPO
+OBS_START_MJD    55616
+OBS_START_MPM    440000
+OBS_START        UTC 2011 02 24 00:07:20.000
+OBS_DUR          300000
+OBS_DUR+         00:05:00.000
+OBS_MODE         STEPPED
+OBS_BW           7
+OBS_BW+          19.600 MHz
+OBS_STP_N        4
+OBS_STP_RADEC    0
+OBS_STP_C1[1]      90.000000000
+OBS_STP_C2[1]      +45.000000000
+OBS_STP_T[1]       60000
+OBS_STP_FREQ1[1]   832697741
+OBS_STP_FREQ1+[1]  37.999999997 MHz
+OBS_STP_FREQ2[1]   1621569285
+OBS_STP_FREQ2+[1]  73.999999990 MHz
+OBS_STP_B[1]       SIMPLE
+OBS_STP_C1[2]      0.000000000
+OBS_STP_C2[2]      +60.000000000
+OBS_STP_T[2]       60000
+OBS_STP_FREQ1[2]   832697741
+OBS_STP_FREQ1+[2]  37.999999997 MHz
+OBS_STP_FREQ2[2]   1621569285
+OBS_STP_FREQ2+[2]  73.999999990 MHz
+OBS_STP_B[2]       MAX_SNR
+OBS_STP_C1[3]      90.000000000
+OBS_STP_C2[3]      +10.000000000
+OBS_STP_T[3]       60000
+OBS_STP_FREQ1[3]   832697741
+OBS_STP_FREQ1+[3]  37.999999997 MHz
+OBS_STP_FREQ2[3]   1621569285
+OBS_STP_FREQ2+[3]  73.999999990 MHz
+OBS_STP_B[3]       MAX_SNR
+OBS_STP_C1[4]      0.000000000
+OBS_STP_C2[4]      +1.000000000
+OBS_STP_T[4]       120000
+OBS_STP_FREQ1[4]   832697741
+OBS_STP_FREQ1+[4]  37.999999997 MHz
+OBS_STP_FREQ2[4]   1621569285
+OBS_STP_FREQ2+[4]  73.999999990 MHz
+OBS_STP_B[4]       SIMPLE
+OBS_FEE[0][1]      1
+OBS_FEE[0][2]      1
+OBS_ASP_FLT[0]     2
+OBS_ASP_AT1[0]     10
+OBS_ASP_AT2[0]     12
+OBS_ASP_ATS[0]     14
+
+OBS_ID           2
+OBS_TITLE        stps-2
+OBS_TARGET       radec-2
+OBS_REMPI        None provided
+OBS_REMPO        Estimated data volume for this observation is 790.1 MB
+OBS_START_MJD    55616
+OBS_START_MPM    800000
+OBS_START        UTC 2011 02 24 00:13:20.000
+OBS_DUR          180000
+OBS_DUR+         00:03:00.000
+OBS_MODE         STEPPED
+OBS_BW           7
+OBS_BW+          19.600 MHz
+OBS_STP_N        2
+OBS_STP_RADEC    1
+OBS_STP_C1[1]      0.000000000
+OBS_STP_C2[1]      +90.000000000
+OBS_STP_T[1]       60000
+OBS_STP_FREQ1[1]   832697741
+OBS_STP_FREQ1+[1]  37.999999997 MHz
+OBS_STP_FREQ2[1]   1621569285
+OBS_STP_FREQ2+[1]  73.999999990 MHz
+OBS_STP_B[1]       SIMPLE
+OBS_STP_C1[2]      12.000000000
+OBS_STP_C2[2]      +80.000000000
+OBS_STP_T[2]       120000
+OBS_STP_FREQ1[2]   832697741
+OBS_STP_FREQ1+[2]  37.999999997 MHz
+OBS_STP_FREQ2[2]   1621569285
+OBS_STP_FREQ2+[2]  73.999999990 MHz
+OBS_STP_B[2]       SIMPLE
+OBS_FEE[0][1]      1
+OBS_FEE[0][2]      0
+OBS_ASP_FLT[0]     1
+OBS_ASP_AT1[0]     11
+OBS_ASP_AT2[0]     13
+OBS_ASP_ATS[0]     15
+
